# proex

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  PAULO_PRODUCTION_ISSUES.md  PR_SUMMARY.md  README.md  claude_code_impact_analysis.md  deployment_insights.md  gap_analysis_report.md  openai_vector_search.py  pyproject.toml  replit.md  start-backend.sh  start-production.sh
attached_assets/: Pasted--Brand-Search-API-Find-company-domains-by-name-Search-for-company-domains-by-brand-name-Get-a-1764100431679_1764100431679.txt  Pasted--ROLE-You-are-Heterogeneity-Architect-the-design-diversity-intelligence-layer-for-PROEX-You-1764037298513_1764037298513.txt  Pasted--Role-You-are-the-best-HTML-document-generator-in-the-world-infallible-These-letters-are-profes-1764037359313_1764037359314.txt  Pasted-Beleza-pra-virar-automa-o-e-ficar-diferente-toda-vez-voc-precisa-for-ar-variabilidade-em-3-po-1761483895955_1761483895956.txt  Pasted-Below-is-a-clean-ruthless-Replit-ready-prompt-you-can-paste-directly-into-your-Repl-it-agent-This-1764028251894_1764028251894.txt  Pasted-INFO-10-82-3-161-0-GET-api-submissions-41cdb7c0-3fd3-4936-8255-921fff1dc6ac-HTTP-1-1-200-O-1763678354233_1763678354234.txt  Pasted-PHASE-2-Cleaning-and-organizing-data-Organized-data-for-Ikaro-Ferreira-Souza-Submission-1dc4ae-1761186658604_1761186658605.txt  Pasted-Prompt-para-Replit-ProEx-Platform-100-Standalone-Sem-n8n-Sem-Supabase-Contexto-Voc-vai-cri-1761184462318_1761184462319.txt  ProEx-2_1761184469221.json  content-1761228164934.md  letter_1_Deisne_de_Araujo_1761403665363.docx  (+8 more)
backend/: email-server.js  (+4 more)
(+144 files in other folders)
