[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.119.1",
    "html-for-docx>=1.0.10",
    "jinja2>=3.1.6",
    "markdown>=3.9",
    "openai>=2.6.0",
    "pdfplumber>=0.11.7",
    "pillow>=12.0.0",
    "pyjwt>=2.10.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "weasyprint>=66.0",
]
